# routes/authors.js
@@ -2,20 +2,51 @@ const express = require("express");
 const router = express.Router();
 
 const authorsController = require("../controllers/authors");
+const validation = require("../validation/author");
 
-// GET all authors
+/*
+    #swagger.tags = ['Authors']
+    #swagger.summary = 'Get all authors'
+    #swagger.description = 'Retrieve all authors from the database.'
+*/
 router.get("/", authorsController.getAllAuthors);
 
-// GET single author
+/*
+    #swagger.tags = ['Authors']
+    #swagger.summary = 'Get a single author'
+    #swagger.description = 'Retrieve one author by its MongoDB ObjectId.'
+*/
 router.get("/:id", authorsController.getSingleAuthor);
 
-// POST create a new author
-router.post("/", authorsController.createAuthor);
+/*
+    #swagger.tags = ['Authors']
+    #swagger.summary = 'Create a new author'
+    #swagger.description = 'Create a new author in the database.'
+*/
+router.post(
+    "/",
+    validation.authorValidationRules(),
+    validation.validate,
+    authorsController.createAuthor
+);
 
-// PUT update an author
-router.put("/:id", authorsController.updateAuthor);
+/*
+    #swagger.tags = ['Authors']
+    #swagger.summary = 'Update an author'
+    #swagger.description = 'Update an existing author.'
+*/
+router.put(
+    "/:id",
+    validation.authorValidationRules(),
+    validation.validate,
+    authorsController.updateAuthor
+);
 
-// DELETE an author
+/*
+    #swagger.tags = ['Authors']
+    #swagger.summary = 'Delete an author'
+    #swagger.description = 'Delete an author from the database.'
+*/
 router.delete("/:id", authorsController.deleteAuthor);
 
 module.exports = router;
